fix bug with submit button visible

--- a/src/main/resources/static/cover.css
+++ b/src/main/resources/static/cover.css
@@ -9,6 +9,7 @@
     color: white;
 }
 
+
 body {
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
@@ -29,6 +30,20 @@ h1,h2 {
 h4 {
     padding-bottom: 20px;
 }
+
+a.textlink {
+    color: #71bf94;
+    border-bottom: .16rem solid #71bf94;
+    text-decoration: none;
+    padding-bottom: .1rem !important;
+}
+
+a.textlink:hover,
+a.textlink:focus {
+    color: rgba(255, 255, 255, .5);
+    border-bottom-color: rgba(255, 255, 255, .25);
+}
+
 
 #drop-area {
     border: 3px dashed #ccc;
